[gd_scene load_steps=10 format=3 uid="uid://c564q6edin8gb"]

[ext_resource type="Script" uid="uid://bnccxvtwsp34k" path="res://main_scene.gd" id="1_wr18j"]
[ext_resource type="PackedScene" uid="uid://d2jthyyxw4ua7" path="res://faccion_bar.tscn" id="4_7ycvg"]
[ext_resource type="Texture2D" uid="uid://2ywc1droy0gk" path="res://sprites/32-A-0_01.jpg" id="6_42l1d"]
[ext_resource type="PackedScene" uid="uid://cwv4jvnr4bp0n" path="res://mission.tscn" id="7_2jcla"]
[ext_resource type="Texture2D" uid="uid://fj7qp04owxim" path="res://sprites/noble.png" id="9_u0ygc"]
[ext_resource type="PackedScene" uid="uid://cy30tn63lifwh" path="res://mission_window.tscn" id="10_qwutr"]
[ext_resource type="Script" uid="uid://bjks1rvtp4sn" path="res://scripts/texture_rect_3.gd" id="12_671wp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1305s"]
bg_color = Color(0.85797924, 0.4590451, 0.5451491, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3mqji"]
bg_color = Color(0.48675662, 0.63354504, 0.63015836, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_wr18j")

[node name="MainContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MapPanel" type="Panel" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1305s")

[node name="Map" type="TextureRect" parent="MainContainer/MapPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 351.0
offset_top = 14.0
offset_right = -354.9392
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_42l1d")
expand_mode = 3
stretch_mode = 5

[node name="M1" parent="MainContainer/MapPanel/Map" instance=ExtResource("7_2jcla")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 795.0
offset_top = 243.0
offset_right = 923.0
offset_bottom = 371.0
grow_horizontal = 1
grow_vertical = 1
start = 5.0
life = 10.0
title = "Mission inicial"
description = "texto super importante"
influencia = 5
descontento = -5
nobleza = 5
iglesia = 5
rey = 5
debrief = "Sus mercedes han oido  un rumor."

[node name="M2" parent="MainContainer/MapPanel/Map" instance=ExtResource("7_2jcla")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 233.0
offset_top = 477.0
offset_right = 361.0
offset_bottom = 605.0
grow_horizontal = 1
grow_vertical = 1
start = 10.0
life = 10.0
title = "Segunda mision"
description = "Texto superimportante 2"
influencia = 5
descontento = -5
nobleza = 5
iglesia = 5
rey = 5
debrief = "Sus mercedes han oido  un rumor."

[node name="MissionWindow" parent="MainContainer/MapPanel" instance=ExtResource("10_qwutr")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.23400001
anchor_top = 0.115
anchor_right = 0.596
anchor_bottom = 0.772
offset_left = 5.7199707
offset_top = -24.900002
offset_right = 242.67993
offset_bottom = 109.08002
grow_horizontal = 1
grow_vertical = 1

[node name="Descontento" parent="MainContainer/MapPanel" instance=ExtResource("4_7ycvg")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 1556.0
offset_top = 17.0
offset_right = 1902.0
offset_bottom = 148.0
faction_signal = "descontento_changed"
faction_name = "Descontento:"

[node name="Influencia" parent="MainContainer/MapPanel" instance=ExtResource("4_7ycvg")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 1558.0
offset_top = 697.0
offset_right = 1894.0
offset_bottom = 823.0
faction_signal = "influencia_changed"
faction_name = "Influencia:"

[node name="Rey" parent="MainContainer/MapPanel" instance=ExtResource("4_7ycvg")]
layout_mode = 1
offset_left = 22.0
offset_top = 64.0
offset_right = 23.99997
offset_bottom = 98.299995
faction_signal = "rey_changed"
faction_name = "Rey:"

[node name="Clero" parent="MainContainer/MapPanel" instance=ExtResource("4_7ycvg")]
layout_mode = 1
offset_left = 18.0
offset_top = 191.0
offset_right = 24.99997
offset_bottom = 246.29999
faction_signal = "iglesia_changed"
faction_name = "Iglesia:"

[node name="Nobleza" parent="MainContainer/MapPanel" instance=ExtResource("4_7ycvg")]
layout_mode = 1
anchor_left = 0.008
anchor_top = 0.374
anchor_right = 0.18900001
anchor_bottom = 0.526
offset_left = -0.3600006
offset_top = 26.359985
offset_right = -5.880005
offset_bottom = 29.639984
faction_signal = "nobleza_changed"
faction_name = "Nobleza:"

[node name="AgentPanel" type="Panel" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_3mqji")

[node name="AgentBar" type="HBoxContainer" parent="MainContainer/AgentPanel"]
layout_mode = 0
offset_top = 4.0
offset_right = 1916.0
offset_bottom = 217.0
size_flags_vertical = 3

[node name="Control" type="Control" parent="MainContainer/AgentPanel/AgentBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect3" type="TextureRect" parent="MainContainer/AgentPanel/AgentBar/Control"]
layout_mode = 0
offset_right = 197.14821
offset_bottom = 213.0
size_flags_horizontal = 0
texture = ExtResource("9_u0ygc")
expand_mode = 3
stretch_mode = 5
script = ExtResource("12_671wp")
